# ChangeLog for x11-libs/qwt
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.78 2010/06/25 12:11:23 jlec Exp $

  25 Jun 2010; Justin Lecher <jlec@gentoo.org> qwt-5.2.0.ebuild,
  qwt-5.2.1.ebuild:
  Blocking media-libs/coin when USE=doc

  02 Jun 2010; Torsten Veller <tove@gentoo.org> metadata.xml:
  Remove caleb from metadata.xml (#317071)

*qwt-5.2.1 (30 Apr 2010)

  30 Apr 2010; Justin Lecher <jlec@gentoo.org> +qwt-5.2.1.ebuild:
  Version Bump #317171

  20 Feb 2010; Raúl Porcel <armin76@gentoo.org> qwt-5.2.0.ebuild:
  Add ~alpha wrt #303677

  30 Jan 2010; Raúl Porcel <armin76@gentoo.org> qwt-5.2.0.ebuild:
  sparc stable wrt #299365

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org> qwt-5.2.0.ebuild:
  Stable for HPPA (bug #299365).

  12 Jan 2010; nixnut <nixnut@gentoo.org> qwt-5.2.0.ebuild:
  ppc stable #299365

  12 Jan 2010; Christian Faulhammer <fauli@gentoo.org> qwt-5.2.0.ebuild:
  stable x86, bug 299365

  07 Jan 2010; Brent Baude <ranger@gentoo.org> qwt-5.2.0.ebuild:
  Marking qwt-5.2.0 ppc64 for bug 299365

  03 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> qwt-5.2.0.ebuild:
  amd64 stable wrt #299365

  06 Oct 2009; Dominik Kapusta <ayoy@gentoo.org> qwt-5.0.2-r1.ebuild,
  qwt-5.1.1.ebuild:
  Removed alternative dependency on Qt metapackage

*qwt-5.2.0 (07 Apr 2009)
*qwt-5.1.2 (07 Apr 2009)

  07 Apr 2009; Sébastien Fabbro <bicatali@gentoo.org> metadata.xml,
  -qwt-4.2.0.ebuild, -qwt-4.2.0-r1.ebuild, -qwt-4.2.0-r2.ebuild,
  -qwt-5.1.0.ebuild, +qwt-5.1.2.ebuild, +qwt-5.2.0.ebuild:
  Version bump, cleaning old versions.

*qwt-5.1.1 (23 Dec 2008)

  23 Dec 2008; Caleb Tennis <caleb@gentoo.org> +qwt-5.1.1.ebuild:
  Version bump

  30 Jul 2008; Jeroen Roovers <jer@gentoo.org> qwt-5.0.2-r1.ebuild,
  qwt-5.1.0.ebuild:
  Fix split Qt dependencies (bug #222703).

  28 Jul 2008; Carsten Lohrke <carlo@gentoo.org> qwt-4.2.0-r2.ebuild,