@@ -1,6 +1,10 @@
 # ChangeLog for x11-libs/qwt
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.78 2010/06/25 12:11:23 jlec Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-libs/qwt/ChangeLog,v 1.79 2010/06/25 20:31:15 reavertm Exp $
+
+  25 Jun 2010; Maciej Mrozowski <reavertm@gentoo.org> qwt-5.2.0.ebuild,
+  qwt-5.2.1.ebuild:
+  Update media-libs/coin block
 
   25 Jun 2010; Justin Lecher <jlec@gentoo.org> qwt-5.2.0.ebuild,
   qwt-5.2.1.ebuild:
